--- a/apps/shell/src/app/app.component.html
+++ b/apps/shell/src/app/app.component.html
@@ -6,6 +6,11 @@
                     Content Projection
                 </a>
             </li>
+            <li>
+                <a [routerLink]="'css-grid'">
+                    CSS Grid
+                </a>
+            </li>
         </ul>
     </nav>
 </header>
