--- a/libs/custom-forms/feature/src/lib/nomination/nomination-create-page3/nomination-create-page3.component.html
+++ b/libs/custom-forms/feature/src/lib/nomination/nomination-create-page3/nomination-create-page3.component.html
@@ -11,7 +11,7 @@
 
       <div class="ledger">
 
-        <div class="deliveries">
+        <div class="deliveries" *ngIf="deliveries.length > 0">
           <table>
             <tr>
               <th>Facility</th>
@@ -32,14 +32,14 @@
           </table>
         </div>
 
-        <div class="receipts">
+        <div class="receipts" *ngIf="receipts.length > 0">
           <table>
             <tr>
               <th>Facility</th>
               <th>Product</th>
               <th>Quantity</th>
             </tr>
-            <tr *ngFor="let reciept of receipts">
+            <tr *ngFor="let reciept of receipts" >
               <td>
                 {{reciept.facility}}
               </td>
