test using testscheduler

--- a/libs/custom-forms/feature/src/lib/nomination/nomination-create-page1/nomination-create-page1.component.html
+++ b/libs/custom-forms/feature/src/lib/nomination/nomination-create-page1/nomination-create-page1.component.html
@@ -9,7 +9,7 @@
 
         </angular-concepts-nx-nomination-header>
     </p-panel>
-    <p-panel *ngIf="showMarineDetails">
+    <p-panel class="marineDetails" header="Marine Details" *ngIf="showMarineDetails">
         <angular-concepts-nx-marine-details 
         formControlName="marineDetails"
         (valueChanged)="vesselChanged($event)"
