Created Structural Directive for practice

--- a/apps/shell/src/app/app.component.html
+++ b/apps/shell/src/app/app.component.html
@@ -1,6 +1,13 @@
 <header>
     <nav>
         <ul>
+
+            <li>
+                <a [routerLink]="'structural-directives'">
+                    Structural Directives
+                </a>
+            </li>
+
             <li>
                 <a [routerLink]="'content-projection'">
                     Content Projection
