--- a/apps/shell/src/app/app.component.html
+++ b/apps/shell/src/app/app.component.html
@@ -24,6 +24,11 @@
                     Custom Forms
                 </a>
             </li>
+            <li>
+                <a [routerLink]="'rxjs-practice'">
+                    Rxjs
+                </a>
+            </li>
         </ul>
     </nav>
 </header>
