retry with delay & limited retires

--- a/libs/rxjs-practice/feature/src/lib/parent/parent.component.html
+++ b/libs/rxjs-practice/feature/src/lib/parent/parent.component.html
@@ -15,5 +15,8 @@
     <li>
         <a [routerLink]="'zip'">zip</a>
     </li>
+    <li>
+        <a [routerLink]="'error-handling'">Error handling</a>
+    </li>
 </ul>
 <router-outlet></router-outlet>
