tests for input& output in nomination header component

--- a/libs/rxjs-practice/feature/src/lib/parent/parent.component.html
+++ b/libs/rxjs-practice/feature/src/lib/parent/parent.component.html
@@ -18,5 +18,12 @@
     <li>
         <a [routerLink]="'error-handling'">Error handling</a>
     </li>
+
+    <li>
+        <a [routerLink]="'take-until'">take Until</a>
+    </li>
+    <li>
+        <a [routerLink]="'observe-on'">Schedulers ObserveOn</a>
+    </li>
 </ul>
 <router-outlet></router-outlet>
